# email-marketing

./: .gitignore  docker-compose.yml  manage.py  package-lock.json  package.json  postcss.config.js  pyproject.toml  tailwind.config.js  webpack.config.js
account/: admin.py  factories.py  forms.py  managers.py  models.py  urls.py  views.py
account/migrations/: 0001_initial.py  0002_membership.py  0003_alter_profile_id.py
account/templates/: div_email_field.html  email.html
account/templates/account/: login.html  profile.html  signup.html
account/templates/django/forms/widgets/: div.html  input_option.html
mailer/: asgi.py  urls.py  wsgi.py
mailer/management/commands/: seed.py
mailer/settings/: __init__.py  base.py
mailer/templates/: base.html  home.html  input_option.html
static/: bundle.js
theme/static/js/: main.js
theme/static_src/: package-lock.json
theme/templates/: base-header.html  base.html  home.html
