[tool.poetry]
name = "mailer"
version = "0.1.0"
description = ""
authors = ["Noë Snaterse <noe@wiredpea.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "^5.0.1"
mysqlclient = "^2.2.1"
django-tailwind = "^3.8.0"
django-browser-reload = "^1.12.1"
django-crispy-forms = "^2.1"
crispy-tailwind = "^1.0.0"


[tool.poetry.group.dev.dependencies]
factory-boy = "^3.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
